--- a/dashboard.html
+++ b/dashboard.html
@@ -10,16 +10,16 @@
   <div class="app">
     <aside class="sidebar">
       <div class="profile" title="View Profile">
-        <img src="img2/hacker.png" alt="User Picture">
+        <img src="hacker.png" alt="User Picture">
         <h3>Do it</h3>
         <h8>Swaraj</h8>
         <hr></hr>
       </div>
       <nav class="menu">
         <ul>
-          <li class="active" data-target="today-tasks" title="Today's Tasks"><img src="img2/shopping-cart.png"><h7>Available Products</h7></li>
-          <li data-target="scheduled-tasks" title="Scheduled Tasks"><img src="img2/info.png"><h7>About us</h7></li>
-          <li data-target="settings" title="Settings"><img src="img2/settings.png"><h7>Settings</h7></li>
+          <li class="active" data-target="today-tasks" title="Today's Tasks"><img src="shopping-cart.png"><h7>Available Products</h7></li>
+          <li data-target="scheduled-tasks" title="Scheduled Tasks"><img src="info.png"><h7>About us</h7></li>
+          <li data-target="settings" title="Settings"><img src="settings.png"><h7>Settings</h7></li>
         </ul>
       </nav>
     </aside>
@@ -32,7 +32,7 @@
       <section id="settings" class="content-section">
         <h1>Settings</h1>
         <div class="settings-category">
-          <h2><img src="img2/profile.png">Profile</h2>
+          <h2><img src="profile.png">Profile</h2>
           <hr></hr>
           <sub class="buttton"></sub>
           <style>
@@ -68,15 +68,15 @@
     <body>
         <div class="settings">
             <div class="button">
-                <span><img src="img2/edit.png"><h5>Profile</h5></span>
+                <span><img src="edit.png"><h5>Profile</h5></span>
                 <span class="chevron">&gt;</span>
             </div>
             <div class="button">
-                <span><img src="img2/lock.png"><h5>Privacy</h5></span>
+                <span><img src="lock.png"><h5>Privacy</h5></span>
                 <span class="chevron">&gt;</span>
             </div>
             <div class="button">
-                <span><image src="img2/key.png"><h5>Change Password</h5></span>
+                <span><image src="key.png"><h5>Change Password</h5></span>
                 <span class="chevron">&gt;</span>
             </div>
           </div>
@@ -176,7 +176,7 @@
         </head>
         <body>
             <div class="notification-settings">
-                <h2><img src="img2/notification.png">Notifications</h2>
+                <h2><img src="notification.png">Notifications</h2>
                 <hr></hr> 
         
                       <div class="notification-item">
@@ -199,7 +199,7 @@
         
 
         <div class="settings-category">
-          <h2><img src="img2/min.png">More</h2>
+          <h2><img src="min.png">More</h2>
           <hr></hr>
           <h5>Language:</h5>
           <div class="more-options">
