--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
 
   <div class="container">
+    <h1>Safestep</h1>
     <div class="heading">Sign In to Your Account</div>
     <form class="form" id="signInForm" action="javascript:void(0);">
       <div class="input-field">
