--- a/dashboard.html
+++ b/dashboard.html
@@ -20,6 +20,8 @@
           <li class="active" data-target="today-tasks" title="Today's Tasks"><img src="shopping-cart.png"><h7>Available Products</h7></li>
           <li data-target="scheduled-tasks" title="Scheduled Tasks"><img src="info.png"><h7>About us</h7></li>
           <li data-target="settings" title="Settings"><img src="settings.png"><h7>Settings</h7></li>
+          <img src="safestep.png">            
+          </class>
         </ul>
       </nav>
     </aside>
