--- a/dashboard.html
+++ b/dashboard.html
@@ -239,6 +239,10 @@
       </section>
     </main>
   </div>
+  <section id="today-tasks" class="content-section active">
+  <div id="productList" class="product-list"></div>
+</section>
+
 
   <script src="app.js"></script>
 </body>
