--- a/dashboard.html
+++ b/dashboard.html
@@ -178,9 +178,9 @@
       <section id="about-info" class="content-section">
         <h1>Contact Info</h1>
         <div class="about-info">
-          <p><strong>Contact Number:</strong> <span id="contactNumber">+1-234-567-890</span></p>
-          <p><strong>Email:</strong> <span id="email">info@example.com</span></p>
-          <p><strong>Instagram:</strong> <a href="https://instagram.com/example" target="_blank">@example</a></p>
+          <p><strong>Contact Number:</strong> <span id="contactNumber">+918921750844</span></p>
+          <p><strong>Email:</strong> <span id="email">swarajks93@gmail.com</span></p>
+          <p><strong>Instagram:</strong> <a href="https://instagram.com/swaraj_r7" target="_blank">@swaraj_r7</a></p>
         </div>
       </section>
 
