--- a/dashboard.html
+++ b/dashboard.html
@@ -166,7 +166,7 @@
       </nav>
 
       <!-- Safestep Image -->
-      <img src="safestep.jpg" alt="Safestep" class="safestep">
+      <img src="safestep.jpeg" alt="Safestep" class="safestep">
     </aside>
 
     <!-- Main Content -->
