--- a/dashboard.html
+++ b/dashboard.html
@@ -58,7 +58,7 @@
       background-color: #444;
     }
 
-    .sidebar img.sstep {
+    .sidebar img.safestep {
       position: absolute;
       bottom: 10px;
       left: 50%;
@@ -166,7 +166,7 @@
       </nav>
 
       <!-- Safestep Image -->
-      <img src="sstep.png" alt="Safestep" class="safestep">
+      <img src="safestep.jpeg" alt="Safestep" class="safestep">
     </aside>
 
     <!-- Main Content -->
