--- a/dashboard.html
+++ b/dashboard.html
@@ -181,7 +181,7 @@
         <h1>Contact Info</h1>
         <div class="about-info">
           <p><strong>Contact Number:</strong> <span id="contactNumber">+918921750844</span></p>
-          <p><strong>Email:</strong> <span id="email">@swarajks93@gmail.com</span></p>
+          <p><strong>Email:</strong> <span id="email">swarajks93@gmail.com</span><a href="mailto:swarajks93@gmail.com?subject=Hello&body=How%20are%20you?"></p>
           <p><strong>Instagram:</strong> <a href="https://instagram.com/swaraj_r7" target="_blank">@swaraj_r7</a></p>
         </div>
       </section>
