--- a/dashboard.html
+++ b/dashboard.html
@@ -178,13 +178,20 @@
 
       <!-- About Info Section -->
       <section id="about-info" class="content-section">
-        <h1>Contact Info</h1>
-        <div class="about-info">
-          <p><strong>Contact Number:</strong> <span id="contactNumber">+918921750844</span></p>
-          <p><strong>Email:</strong> <span id="email">swarajks93@gmail.com</span><a href="mailto:swarajks93@gmail.com?subject=Hello&body=How%20are%20you?"></p>
-          <p><strong>Instagram:</strong> <a href="https://instagram.com/swaraj_r7" target="_blank">@swaraj_r7</a></p>
-        </div>
-      </section>
+  <h1>Contact Info</h1>
+  <div class="about-info">
+    <p><strong>Contact Number:</strong> <span id="contactNumber">+918921750844</span></p>
+    <p><strong>Email:</strong> 
+      <a href="mailto:swarajks93@gmail.com?subject=Hello&body=How%20are%20you?">
+        swarajks93@gmail.com
+      </a>
+    </p>
+    <p><strong>Instagram:</strong> 
+      <a href="https://instagram.com/swaraj_r7" target="_blank">@swaraj_r7</a>
+    </p>
+  </div>
+</section>
+
 
       <!-- Settings Section -->
       <section id="settings" class="content-section">
