--- a/dashboard.html
+++ b/dashboard.html
@@ -199,6 +199,11 @@
         <div class="settings-category">
           <h2><img src="profile.png" alt="Profile"> Profile</h2>
           <hr>
+          <div class="settings">
+            <div class="button">
+                <span><img src="img2/edit.png"><h5>Profile</h5></span>
+                <span class="chevron">&gt;</span>
+            </div>
           <!-- Add Profile Settings Content Here -->
         </div>
 
