--- a/dashboard.html
+++ b/dashboard.html
@@ -20,7 +20,7 @@
 
     .sidebar {
       width: 20%;
-      background-color: blue;
+      background-color: grey;
       color: #fff;
       display: flex;
       flex-direction: column;
