--- a/dashboard.html
+++ b/dashboard.html
@@ -6,51 +6,41 @@
   <title>Safestep</title>
   <link rel="stylesheet" href="st.css">
   <style>
-    :root {
-      --primary-bg: #f4f4f9;
-      --sidebar-bg: grey;
-      --sidebar-text: white;
-      --accent-color: #ca8bfe;
-      --transition: 0.4s ease-in-out;
-    }
-
-    * {
+    body {
+      font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
-      box-sizing: border-box;
-      font-family: Arial, sans-serif;
+      background-color: #f4f4f9;
     }
 
-    body {
+    .app {
       display: flex;
       height: 100vh;
-      background-color: var(--primary-bg);
     }
 
     .sidebar {
       width: 20%;
-      background-color: var(--sidebar-bg);
-      color: var(--sidebar-text);
+      background-color: grey;
+      color: #fff;
       display: flex;
       flex-direction: column;
-      align-items: center;
+      position: relative;
+    }
+
+    .profile {
+      text-align: center;
       padding: 20px;
     }
 
     .profile img {
-      width: 60px;
+      width: 50px;
       border-radius: 50%;
-      margin-bottom: 10px;
-    }
-
-    .menu {
-      width: 100%;
-      text-align: center;
-      margin-top: 20px;
     }
 
     .menu ul {
-      list-style: none;
+      list-style-type: none;
+      padding: 0;
+      margin: 0;
     }
 
     .menu li {
@@ -58,35 +48,54 @@
       cursor: pointer;
       display: flex;
       align-items: center;
-      justify-content: center;
-      transition: var(--transition);
     }
 
-    .menu li:hover,
+    .menu li img {
+      margin-right: 10px;
+    }
+
     .menu li.active {
       background-color: #444;
     }
 
-    .safestep-logo {
-      margin-top: auto;
-      width: 180px;
+    .sidebar img.safestep {
+      position: absolute;
+      bottom: 10px;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 200px;
+      height: 250px;
     }
 
     .main-content {
       flex: 1;
-      padding: 30px;
+      padding: 20px;
       overflow-y: auto;
     }
 
     .settings-category {
-      margin: 20px 0;
+      margin-top: 20px;
+    }
+
+    .settings-category h2 img {
+      vertical-align: middle;
+      margin-right: 10px;
+    }
+
+    .notification-settings,
+    .more-options {
+      margin-top: 20px;
+    }
+
+    .more-options select {
+      margin: 10px 0;
     }
 
     .switch {
       position: relative;
       display: inline-block;
-      width: 50px;
-      height: 24px;
+      width: 60px;
+      height: 34px;
     }
 
     .switch input {
@@ -103,24 +112,24 @@
       right: 0;
       bottom: 0;
       background-color: #ccc;
-      transition: var(--transition);
-      border-radius: 24px;
+      transition: 0.4s;
+      border-radius: 34px;
     }
 
     .slider:before {
       position: absolute;
       content: "";
-      height: 18px;
-      width: 18px;
+      height: 26px;
+      width: 26px;
       border-radius: 50%;
-      left: 3px;
-      bottom: 3px;
+      left: 4px;
+      bottom: 4px;
       background-color: white;
-      transition: var(--transition);
+      transition: 0.4s;
     }
 
     input:checked + .slider {
-      background-color: var(--accent-color);
+      background-color: #ca8bfe;
     }
 
     input:checked + .slider:before {
@@ -129,42 +138,63 @@
   </style>
 </head>
 <body>
-  <aside class="sidebar">
-    <div class="profile">
-      <img src="hacker.png" alt="User Picture">
-      <h3>Do it</h3>
-      <p>Swaraj</p>
-    </div>
-    <nav class="menu">
-      <ul>
-        <li class="active" title="Today's Tasks">
-          <img src="shopping-cart.png" alt="Cart"> Available Products
-        </li>
-        <li title="About Info">
-          <img src="info.png" alt="Info"> About Us
-        </li>
-        <li title="Settings">
-          <img src="settings.png" alt="Settings"> Settings
-        </li>
-      </ul>
-    </nav>
-    <img src="safestep.jpeg" alt="Safestep" class="safestep-logo">
-  </aside>
+  <div class="app">
+    <!-- Sidebar -->
+    <aside class="sidebar">
+      <div class="profile" title="View Profile">
+        <img src="hacker.png" alt="User Picture">
+        <h3>Do it</h3>
+        <h8>Swaraj</h8>
+        <hr>
+      </div>
 
-  <main class="main-content">
-    <section id="about-info">
-      <h1>Contact Info</h1>
-      <p><strong>Contact Number:</strong> +918921750844</p>
-      <p><strong>Email:</strong> <a href="mailto:swarajks93@gmail.com">swarajks93@gmail.com</a></p>
-      <p><strong>Instagram:</strong> <a href="https://instagram.com/swaraj_r7" target="_blank">@swaraj_r7</a></p>
-    </section>
+      <nav class="menu">
+        <ul>
+          <li class="active" data-target="today-tasks" title="Today's Tasks">
+            <img src="shopping-cart.png" alt="Cart">
+            <h7>Available Products</h7>
+          </li>
+          <li data-target="about-info" title="About Info">
+            <img src="info.png" alt="Info">
+            <h7>About Us</h7>
+          </li>
+          <li data-target="settings" title="Settings">
+            <img src="settings.png" alt="Settings">
+            <h7>Settings</h7>
+          </li>
+        </ul>
+      </nav>
 
-    <section id="settings">
-      <h1>Settings</h1>
-      
+      <!-- Safestep Image -->
+      <img src="safestep.jpeg" alt="Safestep" class="safestep">
+    </aside>
 
-  <main class="main-content">
-    <section id="settings">
+    <!-- Main Content -->
+    <main class="main-content">
+      <!-- Available Products Section -->
+      <section id="today-tasks" class="content-section active">
+        <div class="product-card" id="productList"></div>
+      </section>
+
+      <!-- About Info Section -->
+      <section id="about-info" class="content-section">
+  <h1>Contact Info</h1>
+  <div class="about-info">
+    <p><strong>Contact Number:</strong> <span id="contactNumber">+918921750844</span></p>
+    <p><strong>Email:</strong> 
+      <a href="mailto:swarajks93@gmail.com?subject=Hello&body=How%20are%20you?">
+        swarajks93@gmail.com
+      </a>
+    </p>
+    <p><strong>Instagram:</strong> 
+      <a href="https://instagram.com/swaraj_r7" target="_blank">@swaraj_r7</a>
+    </p>
+  </div>
+</section>
+
+
+      <!-- Settings Section -->
+      <section id="settings" class="content-section">
       <h1>Settings</h1>
       <div class="settings-category">
         <h2><img src="profile.png" alt="Profile"> Profile</h2>
@@ -173,24 +203,71 @@
           <img src="edit.png"> Edit Profile
         </div>
       </div>
-    </section>
-  </main>
 
-  <div class="modal" id="profileModal">
-    <div class="modal-header">
-      <span>Edit Profile</span>
-      <span onclick="closeModal()" style="cursor: pointer;">&times;</span>
-    </div>
-    <div class="modal-content">
-      <input type="text" id="username" placeholder="Enter your name">
-      <input type="email" id="email" placeholder="Enter your email">
-    </div>
-    <div class="modal-footer">
-      <button class="close-btn" onclick="closeModal()">Cancel</button>
-      <button class="save-btn" onclick="saveProfile()">Save</button>
-    </div>
+      <div class="modal" id="profileModal">
+        <div class="modal-header">
+          <span>Edit Profile</span>
+          <span onclick="closeModal()" style="cursor: pointer;">&times;</span>
+        </div>
+        <div class="modal-content">
+          <input type="text" id="username" placeholder="Enter your name">
+          <input type="email" id="email" placeholder="Enter your email">
+        </div>
+        <div class="modal-footer">
+          <button class="close-btn" onclick="closeModal()">Cancel</button>
+          <button class="save-btn" onclick="saveProfile()">Save</button>
+        </div>
+      </div>
+    
+        <h1>Settings</h1>
+        <div class="settings-category">
+          <h2><img src="profile.png" alt="Profile"> Profile</h2>
+          <hr>
+          <div class="settings">
+            <div class="button">
+                <span><img src="img2/edit.png"><h5>Profile</h5></span>
+                <span class="chevron">&gt;</span>
+            </div>
+          <!-- Add Profile Settings Content Here -->
+        </div>
+
+        <div class="settings-category">
+          <h2><img src="notification.png" alt="Notifications"> Notifications</h2>
+          <hr>
+          <div class="notification-settings">
+            <div class="notification-item">
+              <label for="notification-toggle">
+                <h5>Notifications</h5>
+              </label>
+              <label class="switch">
+                <input type="checkbox" id="notification-toggle">
+                <span class="slider"></span>
+              </label>
+            </div>
+          </div>
+        </div>
+
+        <div class="settings-category">
+          <h2><img src="min.png" alt="More"> More</h2>
+          <hr>
+          <div class="more-options">
+            <h5>Language:</h5>
+            <select id="language">
+              <option value="en">English</option>
+              <option value="fr">French</option>
+              <option value="es">Spanish</option>
+            </select>
+            <h5>Country:</h5>
+            <select id="country">
+              <option value="us">United States</option>
+              <option value="fr">France</option>
+              <option value="in">India</option>
+            </select>
+          </div>
+        </div>
+      </section>
+    </main>
   </div>
-
   <script>
     function openModal() {
       document.getElementById("profileModal").classList.add("show");
@@ -205,37 +282,6 @@
       closeModal();
     }
   </script>
-
-      <div class="settings-category">
-        <h2><img src="notification.png" alt="Notifications"> Notifications</h2>
-        <hr>
-        <label class="switch">
-          <input type="checkbox" id="notification-toggle">
-          <span class="slider"></span>
-        </label>
-      </div>
-
-      <div class="settings-category">
-        <h2><img src="min.png" alt="More"> More</h2>
-        <hr>
-        <label>Language: 
-          <select id="language">
-            <option value="en">English</option>
-            <option value="fr">French</option>
-            <option value="es">Spanish</option>
-          </select>
-        </label>
-        <label>Country: 
-          <select id="country">
-            <option value="us">United States</option>
-            <option value="fr">France</option>
-            <option value="in">India</option>
-          </select>
-        </label>
-      </div>
-    </section>
-  </main>
-
   <script src="app.js"></script>
 </body>
 </html>
