--- a/dashboard.html
+++ b/dashboard.html
@@ -206,6 +206,10 @@
 
 <div class="modal" id="profileModal">
   <div class="modal-header">
+    
+      <section id="settings" class="content-section">
+        <h1>Settings</h1>
+        <div class="settings-category">
     <span>Edit Profile</span>
     <span onclick="closeModal()" style="cursor: pointer;">&times;</span>
   </div>
