--- a/dashboard.html
+++ b/dashboard.html
@@ -195,48 +195,17 @@
 
       <!-- Settings Section -->
       <section id="settings" class="content-section">
-        <h2><img src="profile.png" alt="Profile"> Profile</h2>
-        <hr>
-        <div class="edit-profile" onclick="openModal()">
-          <img src="edit.png"> Edit Profile
-        </div>
-      </div>
-  </main>
-</div>
-
-<div class="modal" id="profileModal">
-  <div class="modal-header">
-    
-      <section id="settings" class="content-section">
         <h1>Settings</h1>
         <div class="settings-category">
-    <span>Edit Profile</span>
-    <span onclick="closeModal()" style="cursor: pointer;">&times;</span>
-  </div>
-  <div class="modal-content">
-    <input type="text" id="username" placeholder="Enter your name">
-    <input type="email" id="email" placeholder="Enter your email">
-  </div>
-  <div class="modal-footer">
-    <button class="close-btn" onclick="closeModal()">Cancel</button>
-    <button class="save-btn" onclick="saveProfile()">Save</button>
-  </div>
-</div>
-
-<script>
-  function openModal() {
-    document.getElementById("profileModal").classList.add("show");
-  }
-  function closeModal() {
-    document.getElementById("profileModal").classList.remove("show");
-  }
-  function saveProfile() {
-    let name = document.getElementById("username").value;
-    let email = document.getElementById("email").value;
-    alert("Profile Updated: " + name + " (" + email + ")");
-    closeModal();
-  }
-</script>
+          <h2><img src="profile.png" alt="Profile"> Profile</h2>
+          <hr>
+          <div class="settings">
+            <div class="button">
+                <span><img src="edit.png"><h5>Edit Profile</h5></span>
+                <span class="chevron">&gt;</span>
+            </div>
+          <!-- Add Profile Settings Content Here -->
+        </div>
 
         <div class="settings-category">
           <h2><img src="notification.png" alt="Notifications"> Notifications</h2>
@@ -273,12 +242,10 @@
           </div>
         </div>
       </section>
-  </section>
     </main>
   </div>
   <script src="app.js"></script>
 </body>
 </html>
-
 
  
