--- a/dashboard.html
+++ b/dashboard.html
@@ -192,6 +192,7 @@
   </div>
 </section>
       <!-- Settings Section -->
+          <!-- Settings Section -->
       <section id="settings" class="content-section">
         <h1>Settings</h1>
         <div class="settings-category">
